# hidden_crack_algo

yolo_cpp/: CMakeLists.txt  README.md
yolo_cpp/include/: yolo.h
yolo_cpp/models/yolo26n/openvino_int8_1280/: best.xml
yolo_cpp/models/yolo26n/v0.1/openvino_int8_640/: best.xml
yolo_cpp/models/yolo26n/v0.2/b/openvino_int8_1280_b/: metadata.yaml
yolo_cpp/models/yolo26n/v0.2/b/openvino_int8_640_b/: best.xml
yolo_cpp/models/yolo26n/v0.2/openvino_int8_1280_wb/: best.xml
yolo_cpp/models/yolo26n/v0.2/openvino_int8_640_wb/: best.xml  metadata.yaml
yolo_cpp/models/yolo26n/v0.2/wb/openvino_int8_1280_wb/: metadata.yaml
yolo_cpp/models/yolo26n/v0.2_th0.8/b/: detail.md
yolo_cpp/models/yolo26n/v0.2_th0.8/b/openvino_int8_1280_b/: best.xml
yolo_cpp/models/yolo26n/v0.2_th0.8/b/openvino_int8_640_b/: metadata.yaml
yolo_cpp/models/yolo26n/v0.2_th0.8/wb/: detail.md
yolo_cpp/models/yolo26n/v0.3_th0.5-0.7/: README.md
yolo_cpp/models/yolo26n/v0.3_th0.5-0.7/openvino_int8_1280/: best.xml
yolo_cpp/models/yolo26n/v0.3_th0.5-0.7/openvino_int8_640/: best.xml
yolo_cpp/src/: main.cpp  run_test.cpp  yolo.cpp
